--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
         <div class="header__top">
             <div class="container header__container header__container-top">
                 <div class="header__contacts">
+                    <!-- <div class="header__region">
+                    <span class="header__region-text">Ваш регион:</span>
+                    <select class="js-choice header__country">
+                        <option value="1">Москва</option>
+                        <option value="2">Казань</option>
+                        <option value="3">Уфа</option>
+                        <option value="4">Пермь</option>
+                    </select>
+                </div>-->
                     <a class="header__tel" href="#">
                         <svg class="icon header__tel-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
                             viewBox="0 0 18 18" fill="none">
@@ -189,6 +198,18 @@
                         </svg>
                     </button>
                 </form>
+                <!--<select class="js-choice header__category">
+                    <option value="0">Категория</option>
+                    <option value="1">Диваны</option>
+                    <option value="2">Кресла</option>
+                    <option value="3">Пуфы</option>
+                    <option value="4">Кровати</option>
+                    <option value="5">Тумбы</option>
+                    <option value="6">Комоды</option>
+                    <option value="7">Стулья</option>
+                    <option value="8">Столы</option>
+                    <option value="9">Аксессуары</option>
+                </select>-->
             </div>
             <div class="header__icons">
                 <a href="#"><svg class="header__icons-svg header__icons-user" xmlns="http://www.w3.org/2000/svg"
